Replaced all icons in budgie-remix slideshow with Moka icons
- Replace icons in `/slideshows/budgie-remix/slides/icons/` with those from budgie-remix's default icon theme, Moka
- Replace all `Ubuntu GNOME` wording with `Budgie-Remix`

--- a/slideshows/budgie-remix/slides/browse.html
+++ b/slideshows/budgie-remix/slides/browse.html
@@ -5,7 +5,7 @@
 <div class="main">
 	<div class="text">
 		<div>
-			<p>With Firefox already installed, Ubuntu GNOME has everything you need to browse the web. Easy browsing, high performance, advanced security, powerful personalization and the cutting edge, all that is between your hands.</p>
+			<p>With Firefox already installed, Budgie-Remix has everything you need to browse the web. Easy browsing, high performance, advanced security, powerful personalization and the cutting edge, all that is between your hands.</p>
 		</div>
 
 		<div class="bigicon">
