--- a/slideshows/budgie-remix/slides/gethelp.html
+++ b/slideshows/budgie-remix/slides/gethelp.html
@@ -5,8 +5,8 @@
 <div class="main big">
 	<div class="text">
 		<div>
-			<p>Thanks for choosing and installing Ubuntu GNOME <br /> <br />
-			Learn more about Ubuntu GNOME in our Wiki Area <a href="https://wiki.ubuntu.com/UbuntuGNOME">tiny.cc/uGWiki</a>. <br /> <br />
+			<p>Thanks for choosing and installing Budgie-Remix <br /> <br />
+			Learn more about Budgie-Remix in our Wiki Area <a href="https://wiki.ubuntu.com/UbuntuGNOME">tiny.cc/uGWiki</a>. <br /> <br />
 			For help and support, go to <a href="https://wiki.ubuntu.com/UbuntuGNOME/ContactUs">tiny.cc/uGContactUs</a>. <br /> <br />
 			Enjoy and have fun!</p>
 		</div>
