--- a/slideshows/budgie-remix/slides/photos.html
+++ b/slideshows/budgie-remix/slides/photos.html
@@ -11,7 +11,7 @@
 		<div class="bigicon">
 			<ul>
 				<li>
-					<img src="icons/photos.png"/>
+					<img src="icons/gnome-photos.png"/>
 				</li>
 				<li>
 					<img src="icons/gimp.png"/>
