--- a/slideshows/budgie-remix/slides/desktop.html
+++ b/slideshows/budgie-remix/slides/desktop.html
@@ -5,23 +5,23 @@
 <div class="main">
 	<div class="text">
 		<div>
-			<p><strong>The Activities Overview is an easy way to access all your basic tasks. </strong> <br /> <br />
-			Having everything in one place is convenient and means that you don't have to learn your way around a maze of different technologies.</p>
+			<p><strong>The desktop is an easy way to access all your basic tasks. </strong> <br /> <br />
+			Having everything in one place is convenient.</p>
 		</div>
 
 		<div class="featured">
 			<ul>
 				<li>
-					<img class="icon" src="icons/overview1.png"/>
-					<p class="caption">Launch and manage <strong>your apps</strong> from the Dash</p>
+					<p class="caption">Launch and manage <strong>your apps</strong> by pressing the Super/Win key</p>
 				</li>
 				<li>
-					<img class="icon" src="icons/overview2.png"/>
-					<p class="caption">Check <strong>your notifications</strong> easily</p>
+					<p class="caption">Check <strong>your notifications</strong> easily through the panel system tray</p>
 				</li>
 				<li>
-					<img class="icon" src="icons/overview3.png"/>
-					<p class="caption">Enhance your work flow with <strong>dynamic workspaces</strong></p>
+					<p class="caption">Customise your desktop <strong>using Raven</strong></p>
+				</li>
+                <li>
+					<p class="caption">Use multiple workspaces <strong>pressing CTRL+TAB</strong></p>
 				</li>
 			</ul>
 		</div>
