Modify and improve slideshow text
- Add more links to 'Help and support' slide
- Revamp Welcome and Desktop slides

--- a/slideshows/budgie-remix/slides/desktop.html
+++ b/slideshows/budgie-remix/slides/desktop.html
@@ -4,27 +4,11 @@
 
 <div class="main">
 	<div class="text">
-		<div>
-			<p><strong>The desktop is an easy way to access all your basic tasks. </strong> <br /> <br />
-			Having everything in one place is convenient.</p>
-		</div>
+			<strong>Budgie</strong> is built exclusively for desktop users. No mobile or tablet here!<br/><br/></p>
 
-		<div class="featured">
-			<ul>
-				<li>
-					<p class="caption">Launch and manage <strong>your apps</strong> by pressing the Super/Win key</p>
-				</li>
-				<li>
-					<p class="caption">Check <strong>your notifications</strong> easily through the panel system tray</p>
-				</li>
-				<li>
-					<p class="caption">Customise your desktop <strong>using Raven</strong></p>
-				</li>
-                <li>
-					<p class="caption">Use multiple workspaces <strong>pressing CTRL+TAB</strong></p>
-				</li>
-			</ul>
-		</div>
+			<li><strong>Budgie Menu</strong> provides quick access to your apps, offering both category and compact views</li><br/>
+			<li><strong>Raven</strong> side panel lets you access applets,noticiations and customization center all in one place</li><br/>
+			<li><strong>Budgie</strong> gets out of your way and provides a clutter free desktop experience</li>
 	</div>
 
 	<img class="screenshot" src="screenshots/desktop.png"/>
