--- a/slideshows/budgie-remix/slides/gethelp.html
+++ b/slideshows/budgie-remix/slides/gethelp.html
@@ -5,12 +5,11 @@
 <div class="main big">
 	<div class="text">
 		<div>
-			<p>Thanks for choosing and installing Budgie-Remix <br /> <br />
-            Its time to get your pen and paper out! <br /> <br />
-            
-			For help and support, go to our website <br /> 
-            <a href="http://budgie-remix.org">budgie-remix.org</a> <br /> <br />
-			Enjoy and have fun!</p>
+			Thanks for choosing and installing <strong>Budgie-Remix</strong>!<br/><br/>
+      <li>Get help and support on our <a href="https://plus.google.com/communities/106822666079268690759">Google+ community</a> or on <strong>Launchpad</strong>: <a href="https://launchpad.net/budgie-remix">launchpad.net/budgie-remix</a></li><br/>
+      <li>Provide feedback and have discussions on our subreddit: <a href="https://www.reddit.com/r/BudgieRemix/">reddit.com/r/BudgieRemix/</a></li><br/>
+			<li>For more information and pointers to other useful resources, please visit our homepage: <a href="http://budgie-remix.org">budgie-remix.org</a></li><br/>
+			Enjoy and have fun! 😃
 		</div>
 	</div>
 
