--- a/slideshows/budgie-remix/slides/office.html
+++ b/slideshows/budgie-remix/slides/office.html
@@ -5,7 +5,7 @@
 <div class="main">
 	<div class="text">
 		<div>
-			<p>Create professional documents, spreadsheets, presentations, drawings and more. LibreOffice is a comprehensive, professional-quality productivity suite shipped by default. Make your day-to-day tasks more easy and fun.
+			<p>Create professional documents, spreadsheets, presentations, drawings and more. <strong>LibreOffice</strong> is a comprehensive, professional-quality productivity suite shipped by default. Make your day-to-day tasks more easy and fun.
 			</p>
 		</div>
 
