--- a/slideshows/budgie-remix/slides/welcome.html
+++ b/slideshows/budgie-remix/slides/welcome.html
@@ -1,14 +1,11 @@
 <div class="header">
-	<h1 class="slidetitle">Welcome to budgie-remix 16.04</h1>
+	<h1 class="slidetitle">Welcome!</h1>
 </div>
 
 <div class="main big">
 	<div class="text">
-		<div>
-			<p>A community driven Linux distro featuring the Budgie Desktop Environment, aiming to provide a modern desktop experience built on top of Ubuntu. <br /> <br />
-            Budgie Desktop is designed with the modern user in mind; it focuses on simplicity and elegance.
-			Budgie-Remix is fast, beautiful, simple, usable and stable Operating System.</p>
-		</div>
+			<li><strong>Budgie-Remix</strong> is a community driven Ubuntu flavor featuring the <strong>Budgie</strong> Desktop Environment</li><br/>
+      <li>Being designed with the modern user in mind, <strong>Budgie</strong> focuses on simplicity and elegance</li><br/>
+			<li><strong>Budgie</strong> tightly integrates with the GNOME stack, employing underlying technologies to offer an alternative desktop experience</li>
 	</div>
-
 </div>
