--- a/slideshows/budgie-remix/slides/media.html
+++ b/slideshows/budgie-remix/slides/media.html
@@ -5,9 +5,9 @@
 <div class="main">
 	<div class="text">
 		<div>
-			<p>Rhythmbox lets you organize your music and listen to Internet radio, podcasts, and more.</p>
+			<p><strong>Rhythmbox</strong> lets you organize your music and listen to Internet radio, podcasts, and more.</p>
 			<br />
-			<p>GNOME Videos allows you to easily watch videos from your computer, DVD, or streamed over the Internet.</p>
+			<p><strong>GNOME Videos</strong> allows you to easily watch videos from your computer, DVD, or streamed over the Internet.</p>
 		</div>
 
 		<div class="bigicon">
