--- a/slideshows/budgie-remix/slides/software.html
+++ b/slideshows/budgie-remix/slides/software.html
@@ -5,8 +5,8 @@
 <div class="main">
 	<div class="text">
 		<div>
-			<p><strong>Say Goodbye to searching the web for a software.</strong> <br /> <br />
-			With GNOME Software you can easily find and install software. Your ratings and reviews are used to rank software by popularity. You have access to thousands of free and commercial applications. Installing anything is just a couple of clicks away from you.</p>
+			<p><strong>Say Goodbye to searching the web for a software</strong> <br /> <br />
+			With <strong>GNOME Software</strong> you can easily find and install software. Your ratings and reviews are used to rank software by popularity. You have access to thousands of free and commercial applications. Installing anything is just a couple of clicks away from you.</p>
 		</div>
 
 		<div class="bigicon">
