Stylize Budgie-Remix as budgie-remix
- Choose budgie-remix stylization to ensure consistency in branding
- Remove reddit link in 'Help and Support' slide to reduce clutter
- Correct some formatting

--- a/slideshows/budgie-remix/slides/accessibility.html
+++ b/slideshows/budgie-remix/slides/accessibility.html
@@ -5,7 +5,7 @@
 <div class="main">
 	<div class="text">
 		<div>
-			<p>At the heart of the Budgie-Remix philosophy is the belief that computing is for everyone. With advanced accessibility tools and options to change language, color scheme and text size, Budgie-Remix makes computing easy – whoever and wherever you are.</p>
+			<p>At the heart of the budgie-remix philosophy is the belief that computing is for everyone. With advanced accessibility tools and options to change language, color scheme and text size, budgie-remix makes computing easy – whoever and wherever you are.</p>
 		</div>
 
 		<div class="bigicon">
