--- a/slideshows/budgie-remix/slides/gethelp.html
+++ b/slideshows/budgie-remix/slides/gethelp.html
@@ -3,14 +3,12 @@
 </div>
 
 <div class="main big">
-	<div class="text">
-		<div>
-			Thanks for choosing and installing <strong>Budgie-Remix</strong>!<br/><br/>
-      <li>Get help and support on our <a href="https://plus.google.com/communities/106822666079268690759">Google+ community</a> or on <strong>Launchpad</strong>: <a href="https://launchpad.net/budgie-remix">launchpad.net/budgie-remix</a></li><br/>
-      <li>Provide feedback and have discussions on our subreddit: <a href="https://www.reddit.com/r/BudgieRemix/">reddit.com/r/BudgieRemix/</a></li><br/>
-			<li>For more information and pointers to other useful resources, please visit our homepage: <a href="http://budgie-remix.org">budgie-remix.org</a></li><br/>
-			Enjoy and have fun! 😃
-		</div>
-	</div>
-
+    <div class="text">
+        <div>
+            Thanks for choosing and installing <strong>budgie-remix</strong>!<br/><br/>
+            <li>Get help and support on our <a href="https://plus.google.com/communities/106822666079268690759">Google+ community</a> or on <strong>Launchpad</strong>: <a href="https://launchpad.net/budgie-remix">launchpad.net/budgie-remix</a></li><br/>
+            <li>For more information and pointers to other useful resources, please visit our homepage: <a href="http://budgie-remix.org">budgie-remix.org</a></li><br/>
+            Enjoy and have fun! 😃
+        </div>
+    </div>
 </div>
