Replace screenshots in Desktop, Browse and Office slides
- Better quality screenshot for Budgie desktop and Firefox browser
- Screenshot of LibreOffice with Sifr icons
- Replace Gnumeric icon in Office slide with LibreOffice
- Replace GNOME Music icon in Media slide with Rhythmbox
- Rearrange icons in Office, Media and Photos slides so that installed apps are listed first

--- a/slideshows/budgie-remix/slides/media.html
+++ b/slideshows/budgie-remix/slides/media.html
@@ -13,10 +13,10 @@
 		<div class="bigicon">
 			<ul>
 				<li>
-					<img src="icons/gnome-videos.png"/>
+					<img src="icons/rhythmbox.png"/>
 				</li>
 				<li>
-					<img src="icons/gnome-music.png"/>
+					<img src="icons/gnome-videos.png"/>
 				</li>
 				<li>
 					<img src="icons/pitivi.png"/>
