--- a/slideshows/budgie-remix/slides/office.html
+++ b/slideshows/budgie-remix/slides/office.html
@@ -11,17 +11,14 @@
 
 		<div class="bigicon">
 			<ul>
-				<!-- <li> -->
-					<!-- <img src="icons/libreoffice.png"/> -->
-				<!-- </li> -->
 				<li>
-					<img src="icons/gnome-documents.png"/>
+					<img src="icons/libreoffice.png"/>
 				</li>
 				<li>
 					<img src="icons/evince.png"/>
 				</li>
 				<li>
-					<img src="icons/gnumeric.png"/>
+					<img src="icons/gnome-documents.png"/>
 				</li>
 			</ul>
 		</div>
