--- a/slideshows/budgie-remix/slides/desktop.html
+++ b/slideshows/budgie-remix/slides/desktop.html
@@ -4,7 +4,7 @@
 
 <div class="main">
 	<div class="text">
-			<strong>Budgie</strong> is built exclusively for desktop users. No mobile or tablet here!<br/><br/></p>
+			<strong>Budgie</strong> is built exclusively for desktop users. No mobile or tablet here!<br/><br/>
 
 			<li><strong>Budgie Menu</strong> provides quick access to your apps, offering both category and compact views</li><br/>
 			<li><strong>Raven</strong> side panel lets you access applets,noticiations and customization center all in one place</li><br/>
