--- a/slideshows/budgie-remix/slides/index.html
+++ b/slideshows/budgie-remix/slides/index.html
@@ -35,7 +35,7 @@
 				<div><a href="media.html"></a></div>
 				<div><a href="photos.html"></a></div>
 				<div><a href="software.html"></a></div>
-				<div><a href="accessibility.html"></a></div>
+				<div><a href="dashboard.html"></a></div>
 				<div><a href="gethelp.html"></a></div>
 			</div>
 
