--- a/slideshows/budgie-remix/slides/dashboard.html
+++ b/slideshows/budgie-remix/slides/dashboard.html
@@ -6,7 +6,7 @@
     <div class="text">
             budgie-remix ships with a hidden feature: <strong>XfDashboard</strong>. Press <strong>CTRL+TAB</strong> to summon the dashboard.
             <br/><br/>
-            XDashboard provides a GNOME Shell like interface with app overview, search and workspaces support.
+            XfDashboard provides a GNOME Shell like interface with application overview, search and workspaces support.
     </div>
 
     <img class="screenshot" src="screenshots/dashboard.png"/>
