--- a/slideshows/budgie-remix/slides/gethelp.html
+++ b/slideshows/budgie-remix/slides/gethelp.html
@@ -6,8 +6,8 @@
     <div class="text">
         <div>
             Thanks for choosing and installing <strong>budgie-remix</strong>!<br/><br/>
-            <li>Get help and support on our Google+ community (Google "google+ budgie-remix") or on <strong>Launchpad</strong>: <a href="https://launchpad.net/budgie-remix">launchpad.net/budgie-remix</a></li><br/>
-            <li>For more information and pointers to other useful resources, please visit our homepage: <a href="http://budgie-remix.org">budgie-remix.org</a></li><br/>
+            <li>Get help and support on our Google+ community (Google "google+ budgie-remix") or on <strong>Launchpad</strong>: <a href="https://launchpad.net/budgie-remix">launchpad.net/budgie-remix</a></li><br />
+            <li>For more information and pointers to other useful resources, please visit our homepage: <a href="https://budgie-remix.org">budgie-remix.org</a></li><br />
             Enjoy and have fun! 😃
         </div>
     </div>
