--- a/slideshows/budgie-remix/slides/office.html
+++ b/slideshows/budgie-remix/slides/office.html
@@ -5,20 +5,19 @@
 <div class="main">
 	<div class="text">
 		<div>
-			<p>Create professional documents, spreadsheets, presentations, drawings and more. <strong>LibreOffice</strong> is a comprehensive, professional-quality productivity suite shipped by default. Make your day-to-day tasks more easy and fun.
-			</p>
+			<p>Create professional documents, spreadsheets, presentations, drawings and more. <strong>LibreOffice</strong> is a comprehensive, professional-quality productivity suite shipped by default. Make your day-to-day tasks more easy and fun.</p>
 		</div>
 
 		<div class="bigicon">
 			<ul>
 				<li>
-					<img src="icons/libreoffice.png"/>
+					<img src="icons/libreoffice.png" />
 				</li>
 				<li>
-					<img src="icons/evince.png"/>
+					<img src="icons/evince.png" />
 				</li>
 				<li>
-					<img src="icons/gnome-documents.png"/>
+					<img src="icons/gnome-documents.png" />
 				</li>
 			</ul>
 		</div>
