--- a/slideshows/budgie-remix/slides/index.html
+++ b/slideshows/budgie-remix/slides/index.html
@@ -28,15 +28,14 @@
 	<body>
 		<div id="wrapper">
 			<div id="slideshow">
-				<div><a href="welcome.html"></a></div>
-				<div><a href="desktop.html"></a></div>
-				<div><a href="browse.html"></a></div>
-				<div><a href="office.html"></a></div>
-				<div><a href="media.html"></a></div>
-				<div><a href="photos.html"></a></div>
-				<div><a href="software.html"></a></div>
-				<div><a href="dashboard.html"></a></div>
-				<div><a href="gethelp.html"></a></div>
+				<div><a href="01_welcome.html"></a></div>
+				<div><a href="02_desktop.html"></a></div>
+				<div><a href="03_browse.html"></a></div>
+				<div><a href="04_office.html"></a></div>
+				<div><a href="05_media.html"></a></div>
+				<div><a href="06_photos.html"></a></div>
+				<div><a href="07_software.html"></a></div>
+				<div><a href="08_gethelp.html"></a></div>
 			</div>
 
 			<div id="controls">
