--- a/slideshows/budgie-remix/slides/01_welcome.html
+++ b/slideshows/budgie-remix/slides/01_welcome.html
@@ -8,4 +8,6 @@
         <li>Being designed with the modern user in mind, <strong>Budgie</strong> focuses on simplicity and elegance</li><br />
         <li><strong>Budgie</strong> tightly integrates with the GNOME stack, employing underlying technologies to offer an alternative desktop experience</li>
 	</div>
+
+	<img class="screenshot" src="icons/budgie-remix-logo.svg" />
 </div>
