White background for all slides except the start and end

--- a/slideshows/budgie-remix/slides/08_gethelp.html
+++ b/slideshows/budgie-remix/slides/08_gethelp.html
@@ -11,4 +11,6 @@
             Enjoy and have fun! 😃
         </div>
     </div>
+
+    <img class="background" src="screenshots/welcome.jpg" />
 </div>
