--- a/slideshows/budgie-remix/slides/01_welcome.html
+++ b/slideshows/budgie-remix/slides/01_welcome.html
@@ -4,10 +4,13 @@
 
 <div class="main big">
 	<div class="text">
-        <li><strong>budgie-remix</strong> is a community driven Ubuntu flavor featuring the <strong>Budgie</strong> Desktop Environment</li><br />
-        <li>Being designed with the modern user in mind, <strong>Budgie</strong> focuses on simplicity and elegance</li><br />
-        <li><strong>Budgie</strong> tightly integrates with the GNOME stack, employing underlying technologies to offer an alternative desktop experience</li>
+        <div>
+            <li><strong>budgie-remix</strong> is a community driven Ubuntu flavor featuring the <strong>Budgie</strong> Desktop Environment</li><br />
+            <li>Being designed with the modern user in mind, <strong>Budgie</strong> focuses on simplicity and elegance</li><br />
+            <li><strong>Budgie</strong> tightly integrates with the GNOME stack, employing underlying technologies to offer an alternative desktop experience</li>
+        </div>
 	</div>
 
+    <img class="background" src="screenshots/welcome.jpg" />
 	<img class="screenshot" src="icons/budgie-remix-logo.svg" />
 </div>
