Improve images and shadows
- Improve shadow for slide header
- Add drop shadow and rounded edges for desktop screenshot
- Better render of background image for start and end slides

--- a/slideshows/budgie-remix/slides/01_welcome.html
+++ b/slideshows/budgie-remix/slides/01_welcome.html
@@ -11,6 +11,6 @@
         </div>
 	</div>
 
-    <img class="background" src="screenshots/welcome.jpg" />
+    <img class="background" src="screenshots/welcome.png" />
 	<img class="screenshot" src="icons/budgie-remix-logo.svg" />
 </div>
