--- a/slideshows/budgie-remix/slides/08_gethelp.html
+++ b/slideshows/budgie-remix/slides/08_gethelp.html
@@ -12,5 +12,5 @@
         </div>
     </div>
 
-    <img class="background" src="screenshots/welcome.jpg" />
+    <img class="background" src="screenshots/welcome.png" />
 </div>
