change budgie-remix references to ubuntu budgie

--- a/slideshows/budgie-remix/slides/08_gethelp.html
+++ b/slideshows/budgie-remix/slides/08_gethelp.html
@@ -5,9 +5,9 @@
 <div class="main big">
     <div class="text">
         <div>
-            Thanks for choosing and installing <strong>budgie-remix</strong>!<br/><br/>
-            <li>Get help and support on our Google+ community (Google "google+ budgie-remix") or on <strong>Launchpad</strong>: <a href="https://launchpad.net/budgie-remix">launchpad.net/budgie-remix</a></li><br />
-            <li>For more information and pointers to other useful resources, please visit our homepage: <a href="https://budgie-remix.org">budgie-remix.org</a></li><br />
+            Thanks for choosing and installing <strong>Ubuntu Budgie</strong>!<br/><br/>
+            <li>Get help and support on our Google+ community (Google "google+ Ubuntu Budgie") or on <strong>Launchpad</strong>: <a href="https://launchpad.net/Ubuntu Budgie">launchpad.net/ubuntubudgie</a></li><br />
+            <li>For more information and pointers to other useful resources, please visit our homepage: <a href="https://ubuntubudgie.org">ubuntubudgie.org</a></li><br />
             Enjoy and have fun! 😃
         </div>
     </div>
